# 009-streamlit-evaluate-QandA-from-long-document-v1

./: Ejemplo universidad.txt  main.py  pyproject.toml  requirements.txt
