[tool.poetry]
name = "009-streamlit-evaluate-qanda-from-long-document"
version = "0.1.0"
description = ""
authors = ["julio colomer <info@aiaccelera.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "^1.37.0"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
chromadb = "^0.5.5"
tiktoken = "^0.7.0"
faiss-cpu = "^1.8.0.post1"
langchain-community = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
